# time_tracker

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
scripts/: build_executable.py  generate_icon.py
tests/: test_database.py
time_tracker/: __init__.py  __main__.py  database.py  main.py  resources.py  schema.sql
